# NasDisplay

./: CMakeLists.txt  README.md  index.html  manifest.json  platformio.ini  sdkconfig.esp32-c6-devkitm-1
openmediavault-uartdisplay/: uartdisplay.info
openmediavault-uartdisplay/debian/: changelog  control  copyright  install  rules
openmediavault-uartdisplay/etc/openmediavault/: uartdisplay.conf
openmediavault-uartdisplay/etc/systemd/system/: uartdisplay.service
openmediavault-uartdisplay/usr/sbin/: uartdisplayd.py
openmediavault-uartdisplay/usr/share/doc/openmediavault-uartdisplay/: README.md
src/: CMakeLists.txt  bsp_config.h  bsp_display.c  bsp_display.h  bsp_i2c.c  bsp_i2c.h  bsp_spi.c  bsp_spi.h  bsp_uart.c  bsp_uart.h  esp_lcd_jd9853.c  esp_lcd_jd9853.h  esp_lvgl_port.c  esp_lvgl_port.h  lv_conf.h  main.c  uart_nas_parser.c  uart_nas_parser.h
src/uart/: uart_parser.c  uart_parser.h
src/ui/: nas_screen.c  nas_screen.h  settings_screen.c  settings_screen.h  system_screen.c  system_screen.h  ui_common.c  ui_common.h
